(fix): fix wrong color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --overlay: #f6eced;
-  --bg: #f1f5f9;
+  --bg: #fff5f6;
   --text: #000000;
   --textinvert: #ffffff;
   --accent: #aa4465;
